{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 450,
  "lineage": "61a399eb-dc5c-31e3-e460-f35d023b0c9c",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:162050386673:security-group/sg-0f807f2b75aa0c911",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0f807f2b75aa0c911",
            "ingress": [],
            "name": "fabriciolfj-us-east-1-dev-node-2023012512095233610000000d",
            "name_prefix": "fabriciolfj-us-east-1-dev-node-",
            "owner_id": "162050386673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-node",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "owned",
              "terraform-managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-node",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "owned",
              "terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4fe3972978ef22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"app\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:162050386673:security-group/sg-0b24a75ba31e1fac9",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0b24a75ba31e1fac9",
            "ingress": [],
            "name": "app-eks-node-group-2023012512095233620000000e",
            "name_prefix": "app-eks-node-group-",
            "owner_id": "162050386673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "app-eks-node-group",
              "terraform-managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-eks-node-group",
              "terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4fe3972978ef22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:162050386673:subnet/subnet-072fbd995f6e56bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072fbd995f6e56bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162050386673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-vpc",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "terraform-managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-vpc",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-08f4fe3972978ef22"
          },
          "dependencies": [
            "data.aws_availability_zones.availability_zones",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:162050386673:vpc/vpc-08f4fe3972978ef22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c69a8cfb6ff225b",
            "default_route_table_id": "rtb-0560f89bb49603119",
            "default_security_group_id": "sg-05c9466aa84223200",
            "dhcp_options_id": "dopt-0ca17be71383b7a20",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f4fe3972978ef22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0560f89bb49603119",
            "owner_id": "162050386673",
            "tags": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-vpc",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "shared",
              "terraform-managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fabriciolfj-us-east-1-dev-vpc",
              "kubernetes.io/cluster/fabriciolfj-us-east-1-dev": "shared",
              "terraform-managed": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}